[package]
name = "proxies_rotator"
version = "0.1.0"
description = "Shuffles your socks - rotating proxy frontend server"
authors = ["quanna <quanna.dev@gmail.com>"]
license = "GPL-3.0"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[lib]
name = "proxies_rotator"
path = "src/lib.rs"

[[bin]]
name = "proxies_rotator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
arc-swap = "1.3.0"
bstr = "1.4.0"
env_logger = "0.10.0"
log = "0.4.14"
rand = "0.8.3"
structopt = "0.3.21"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "fs"] }